src/test/deca/context/invalid/created/testInitVar/DeclarationSansType.deca
// Description :
//    Test invalide : Affectation à une variable non déclarée
//
// Résultats :
//    Erreur contextuelle
//    Ligne 10: TypeDeclarationRequiredException: A type declaration is required for proper initialization. 


{
    x = 1 - 3;
    println(x);
}

